globus-ftp-client (8.13-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Fix dependency
  * Quiet some autoconf/automake warnings
  * Use mixed case man page install for all packages

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 12:20:22 -0400

globus-ftp-client (8.12-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-ftp-client (8.11-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-ftp-client (8.11-1+gt6.@distro@) @distro@; urgency=low

  * Skip put-test.pl on mingw

 -- Globus Toolkit <support@globus.org>  Wed, 06 Aug 2014 07:35:42 -0400

globus-ftp-client (8.10-1+gt6.@distro@) @distro@; urgency=low

  * Skip put-test.pl on mingw

 -- Globus Toolkit <support@globus.org>  Tue, 05 Aug 2014 13:39:53 -0400

globus-ftp-client (8.9-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-ftp-client (8.9-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:38 -0400

globus-ftp-client (8.8-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 16:02:58 -0400

globus-ftp-client (8.7-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-ftp-client (8.6-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:54 -0400

globus-ftp-client (8.6-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:40 -0500
