@@ -1,6 +1,6 @@
 Name: globus-ftp-client
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.13.tar.gz
+Source: http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.14.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
